K8s/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: tlmc-player
  labels:
    name: tlmc-player
    istio-injection: enabled
