K8s/pgsql-musicdata-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgsql-musicdata-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgsql-musicdata-depl

  template:
    metadata:
      labels:
        app: pgsql-musicdata-depl

    spec:
      containers:
      - name: pgsql-musicdata-depl
        image: postgres
        ports:
        - containerPort: 5432

        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgredb

      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: pgsql-musicdata-pv-claim
