K8s/playlist-api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playlist-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playlist-api
  template:
    metadata:
      labels:
        app: playlist-api
    spec:
      containers:
      - name: playlist-api
        image: sqzd269/playlist-api:latest
