K8s/auth-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-api-clusterip
spec:
  type: ClusterIP
  selector:
    app: auth-api
  ports:
    - name: auth-api
      port: 80
      protocol: TCP
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: auth-api-nodeport
spec:
  type: NodePort
  selector:
    app: auth-api
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
