K8s/auth-pgsql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-pgsql-clusterip
spec:
  type: ClusterIP
  selector:
    app: auth-pgsql-depl
  ports:
  - name: auth-pgsql-db-port
    protocol: TCP
    port: 5432
    targetPort: 5432
    
---

apiVersion: v1
kind: Service
metadata:
  name: auth-pgsql-nodeport
spec:
  type: NodePort
  selector:
    app: auth-pgsql-depl
  ports:
  - port: 15432
    targetPort: 5432
    protocol: TCP
