K8s/musicdata-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: musicdata-api-clusterip
spec:
  type: ClusterIP
  selector:
    app: musicdata-api
  ports:
    - name: musicdata-api
      port: 80
      protocol: TCP
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: musicdata-api
spec:
  type: NodePort
  selector:
    app: musicdata-api
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
