K8s/musicdata-pgsql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: musicdata-pgsql-clusterip
spec:
  type: ClusterIP
  selector:
    app: musicdata-pgsql-depl
  ports:
  - name: musicdata-pgsql-db-port
    protocol: TCP
    port: 5432
    targetPort: 5432
    
---

apiVersion: v1
kind: Service
metadata:
  name: musicdata-pgsql-nodeport
spec:
  type: NodePort
  selector:
    app: musicdata-pgsql-depl
  ports:
  - port: 15432
    targetPort: 5432
    protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: pgsql-musicdata-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: musicdata-pgsql-depl
  ports:
    - name: musicdata-pgsql-db-port
      protocol: TCP
      port: 15432
      targetPort: 5432
