K8s/playlist-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: playlist-api-clusterip
spec:
  type: ClusterIP
  selector:
    app: playlist-api
  ports:
    - name: playlist-api
      port: 80
      protocol: TCP
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: playlist-api-nodeport
spec:
  type: NodePort
  selector:
    app: playlist-api
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
