K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: tlmc-player
  annotations:
    # Uncomment if deploying on Microk8s and comment line 8
    kubernetes.io/ingress.class: public
  labels:
    name: ingress

spec:
  rules:
    - host: sso.marisad.me
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: keycloak-server-clusterip
                port:
                  number: 8080

    - host: api.marisad.me
      http:
        paths:
          # Music Data Service
          - pathType: Prefix
            path: "/api/music"
            backend:
              service:
                name: backend-api-clusterip
                port:
                  number: 80
          - pathType: Prefix
            path: "/api/entity/circle"
            backend:
              service:
                name: backend-api-clusterip
                port:
                  number: 80
          - pathType: Prefix
            path: "/api/asset"
            backend:
              service:
                name: backend-api-clusterip
                port:
                  number: 80
          - pathType: Prefix
            path: "/api/source"
            backend:
              service:
                name: backend-api-clusterip
                port:
                  number: 80
          - pathType: Prefix
            path: "/api/playlists"
            backend:
              service:
                name: backend-api-clusterip
                port:
                  number: 80

          # User Profile Service
          - pathType: Prefix
            path: "/api/user"
            backend:
              service:
                name: backend-api-clusterip
                port:
                  number: 80

          # API Explorer
          - pathType: Prefix
            path: "/swagger"
            backend:
              service:
                name: backend-api-clusterip
                port:
                  number: 80
